fix(style): use 2 columns for engines in cwts on mobile

--- a/packages/fxa-content-server/app/styles/modules/_custom-rows.scss
+++ b/packages/fxa-content-server/app/styles/modules/_custom-rows.scss
@@ -250,10 +250,7 @@ input[type='checkbox'] {
 .two-col-items {
   display: grid;
   margin: 20px 0 10px 0;
-
-  @include respond-to('big') {
-    grid-template-columns: repeat(2, 1fr);
-  }
+  grid-template-columns: repeat(2, 1fr);
 
   .trailhead & {
     margin-bottom: 0;
@@ -261,7 +258,10 @@ input[type='checkbox'] {
   }
 
   .choose-what-to-sync-row {
+    line-break: anywhere;
     margin-bottom: 10px;
+    padding-right: 4px;
+    word-break: break-all;
 
     .trailhead & {
       margin-bottom: 20px;
